--- a/DjangoProto/InteractiveMath_prj/static/css/DynamicTrig1.css
+++ b/DjangoProto/InteractiveMath_prj/static/css/DynamicTrig1.css
@@ -67,16 +67,19 @@ This is the style sheet for the DynamicTrig1.html page
 	position: absolute;
 	left: 300px;
 	top: 40px;
+	white-space: nowrap; /*prevent small screen rearrangement*/
 }
 #LastFrequencies_DT1{
 	position: absolute;
 	left: 300px;
 	top: 60px;
+	white-space: nowrap; /*prevent small screen rearrangement*/
 }
 #UserNotices_DT1{
 	position: absolute;
 	left: 0px;
 	top: 120px;
+	white-space: nowrap; /*prevent small screen rearrangement*/
 }
 #ExplnFreqMark{
 	color: lime
